# public-demo-code

./: KIF_laminar03.py  KIF_laminar_dist_analysis03.ipynb  LICENSE  README.md  colorimetric_lineage_collab_demo.ipynb
.ipynb_checkpoints/: KIF_laminar_dist_analysis03-checkpoint.ipynb
image_analysis_code/: 02_preprocess_images.ijm  03_assemble_multi_stack.ijm  06_cell_position_analysis.ipynb  KIF_FIJImacro_image_preprocessing.ijm  KIF_FIJImacro_make_multi_stack.ijm  README.md
image_analysis_code/.ipynb_checkpoints/: KIF_laminar_dist_analysis03-checkpoint.ipynb
multicolor_lineage_model/: pyproject.toml
multicolor_lineage_model/notebooks/: Image_constructor.ipynb  Multicolor_cell_lineage_generative_model_2023.ipynb
